objects/Quote_Reconfigure__c.object
<CustomObject>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Id__c</fullName>
        <label>Quote Line Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strDateQuoteStart__c</fullName>
        <label>strDateQuoteStart</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strEndQuoteStart__c</fullName>
        <label>strEndQuoteStart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote Reconfigure</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Reconfigures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>